--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 
-streamlit>=1.30.0
-pandas>=1.5.0
-numpy>=1.23.0
-scikit-learn>=1.2.0
-matplotlib>=3.6.0
-seaborn>=0.12.0
-nltk>=3.8.1
+streamlit
+pandas
+scikit-learn
